# Paths

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py  conf.example.json  conf.json  main.lua  scc.sh
Lib/Include/Maths/: MatVec.hpp  Maths.hpp  Matrix.hpp  Random.hpp  Vector.hpp
Lib/Include/Paths/: Camera.hpp  Color.hpp  Common.hpp  Ray.hpp
Lib/Include/Paths/Image/: Filter.hpp  Image.hpp  Image.ipp
Lib/Include/Paths/Image/Exporters/: EXRExporter.hpp  PNGExporter.hpp
Lib/Include/Paths/Integrator/: Averager.hpp  Integrator.hpp
Lib/Include/Paths/Integrator/Sampler/: Albedo.hpp  MonteCarlo.hpp  SamplerWrapper.hpp  Statistics.hpp  Whitted.hpp
Lib/Include/Paths/Lua/: Lua.hpp  LuaCompat.hpp
Lib/Include/Paths/Material/: material.hpp
Lib/Include/Paths/STL/: Binary.hpp  Common.hpp
Lib/Include/Paths/Scene/: Scene.hpp  Store.hpp  TBVH.hpp  ThinBVH.hpp  Traversal.hpp  Tree.hpp
Lib/Include/Paths/Shape/: AxisAlignedBox.hpp  Disc.hpp  Plane.hpp  Shape.hpp  Shapes.hpp  Sphere.hpp  Triangle.hpp
Lib/Include/Utils/: BufferedChannel.hpp  CircularBuffer.hpp  PointerIterator.hpp  SpinLock.hpp  Utils.hpp  WaitGroup.hpp  WorkerPool.hpp
Lib/Src/Paths/: Camera.cpp
Lib/Src/Paths/Image/Exporters/: EXRExporter.cpp  PNGExporter.cpp
Lib/Src/Paths/Integrator/: Averager.cpp
Lib/Src/Paths/Integrator/Sampler/: Albedo.cpp  MonteCarlo.cpp  Statistics.cpp  Whitted.cpp
Lib/Src/Paths/Lua/: Lua.cpp  LuaCompat$Camera.cpp  LuaCompat$Image.cpp  LuaCompat$Integrator.cpp  LuaCompat$Matrix.cpp  LuaCompat$Ray.cpp  LuaCompat$Scene.cpp  LuaCompat$Store.cpp  LuaCompat$Vector.cpp
Lib/Src/Paths/STL/: Binary.cpp
Paths/Benchmarks/: rand.cpp
Paths/Main/: main.cpp
Paths/Tests/: distribTest.cpp  maths_utils.hpp  plot.py  test_maths.cpp  test_prng.cpp  test_test.cpp
benchmarks/: rand.cpp
example render/: rabbit1024.exr  resume.json  teapot4096.exr
lib/: CMakeLists.txt
lib/gfx/: CMakeLists.txt
lib/gfx/include/gfx/: camera.hpp  color.hpp  common.hpp  definitions.hpp  image.hpp  material.hpp  ray.hpp  scene.hpp  spectrum.hpp
lib/gfx/include/gfx/camera/: body.hpp  camera.hpp  filter.hpp  ui.hpp
lib/gfx/include/gfx/image/: color.hpp  filter.hpp  image.hpp
lib/gfx/include/gfx/image/exporters/: exr.hpp  png.hpp
lib/gfx/include/gfx/integrator/: albedo.hpp  averager.hpp  integrator.hpp  mc.hpp  sampler.hpp  samplerWrapper.hpp  sampler_wrapper.hpp  stat.hpp  stub_integrator.hpp  whitted.hpp
lib/gfx/include/gfx/integrators/: integrator.hpp  samplerWrapper.hpp
lib/gfx/include/gfx/material/: material.hpp
lib/gfx/include/gfx/sampler/: pt.hpp  sampler.hpp  samplers.hpp  whitter.hpp
lib/gfx/include/gfx/samplers/: samplers.hpp
lib/gfx/include/gfx/scene/: bvh.hpp  newtree.hpp  scene.hpp  store.hpp  tbvh.hpp  thinbvh.hpp  traversal.hpp  tree.hpp
lib/gfx/include/gfx/shape/: aabox.hpp  disc.hpp  plane.hpp  shape.hpp  shapes.hpp  sphere.hpp  triangle.hpp
lib/gfx/include/gfx/shapes/: aabox.hpp  plane.hpp  shape.hpp  shapes.hpp  triangle.hpp
lib/gfx/include/gfx/stl/: binary.hpp  common.hpp
lib/gfx/src/: scene.cpp
lib/gfx/src/camera/: body.cpp  camera.cpp
lib/gfx/src/gfx/: camera.cpp
lib/gfx/src/gfx/integrator/: albedo.cpp  averager.cpp  mc.cpp  stat.cpp  whitted.cpp
lib/gfx/src/gfx/stl/: binary.cpp
lib/gfx/src/image/: image.cpp
lib/gfx/src/image/exporters/: exr.cpp  png.cpp
lib/gfx/src/scene/: bvh.cpp
lib/gfx/src/stl/: common.cpp
lib/include/gfx/: camera.hpp  definitions.hpp  image.hpp  material.hpp  ray.hpp
lib/include/gfx/concepts/: integrator.hpp  shape.hpp
lib/include/gfx/integrators/: integrators.hpp  samplerWrapper.hpp
lib/include/gfx/sampler/: pt.hpp  whitter.hpp
lib/include/gfx/samplers/: whitter.hpp
lib/include/gfx/shape/: shapes.hpp
lib/include/gfx/shapes/: aabox.hpp  triangle.hpp
lib/include/gfx/stl/: common.hpp
lib/include/math/: math.hpp
lib/include/maths/: maths.hpp
lib/maths/: CMakeLists.txt
lib/maths/include/maths/: concepts.hpp  maths.hpp  matrix.hpp  matvec.hpp  rand.hpp  vector.hpp
lib/src/gfx/: camera.cpp  definitions.cpp  image.cpp  material.cpp  spectrum.cpp
lib/src/gfx/concepts/: integrator.cpp
lib/src/gfx/integrators/: samplerWrapper.cpp
lib/src/gfx/samplers/: whitter.cpp
lib/src/gfx/shapes/: aabox.cpp  plane.cpp  shape.cpp  triangle.cpp
lib/src/gfx/stl/: binary.cpp
lib/src/math/: math.cpp
lib/utils/: CMakeLists.txt
lib/utils/include/utils/: bufChan.hpp  buf_chan.hpp  circBuffer.hpp  circular_buffer.hpp  ptrIterator.hpp  spin_lock.hpp  utils.hpp  waitGroup.hpp  wait_group.hpp  workerPool.hpp  worker_pool.hpp
libpaths/: CMakeLists.txt  conanfile.py
libpaths/include/gfx/: material.hpp  ray.hpp
libpaths/include/gfx/sampler/: pt.hpp
libpaths/include/gfx/scene/: scene.hpp
libpaths/include/gfx/shape/: aabox.hpp  disc.hpp  sphere.hpp
libpaths/include/maths/: matvec.hpp
libpaths/include/utils/: bufChan.hpp
libpaths/src/gfx/: image.cpp
libpaths/src/gfx/scene/: scene.cpp
libpaths/src/gfx/stl/: binary.cpp  common.cpp
paths/: cameraSetup.cpp  cameraSetup.hpp  distribTest.cpp  lua.cpp  lua.hpp  luaCompat$camera.cpp  luaCompat$image.cpp  luaCompat$integrator.cpp  luaCompat$matrix.cpp  luaCompat$ray.cpp  luaCompat$scene.cpp  luaCompat$store.cpp  luaCompat$vector.cpp  luaCompat.hpp  main.cpp  plot.py
tests/: CMakeLists.txt  distribTest.cpp  maths_utils.hpp  plot.py  test_maths.cpp  test_prng.cpp
